<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TisseoVelib</string>
    <string name="action_settings">Options</string>
    <string name="arret_name">Nom de l\'arret :</string>
    <string name="directions">Directions :</string>
    <string name="depart_indispo">Aucun départ disponible</string>
    <string name="adress_save">Adresse enregistré</string>
    <string name="station_name">Nom de la station</string>
    <string name="station_velo_dispo">Vélo disponible :</string>
    <string name="station_place_dispo">Place disponible :</string>
    <string name="station_adresse">Adresse de la station</string>
    <string name="like">like</string>
    <string name="unlike">unlike</string>
    <string name="horaires">horaires</string>
    <string name="search">search</string>
    <string name="loading">Chargement en cours</string>
    <string name="plan">Plan</string>
    <string name="form_your_adress">Votre adresse :</string>
    <string name="form_ligne">Ligne :</string>
    <string name="form_arret">Arret :</string>
    <string name="form_nom_station">Nom ou adresse de la station</string>
    <string name="button_valider">Valider</string>
    <string name="destination">Destination</string>
    <string name="fiable">Plus fiable</string>
    <string name="rapide">Plus rapide</string>
    <string name="velotoulouse">Vélô Toulouse</string>
    <string name="busmetro">Bus / métro</string>
    <string name="aucunresultat">Désolé, aucune correspondance trouvé.</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Accueil</item>
        <item>Prochain bus/métro</item>
        <item>Rentrer chez moi</item>
        <item>Vélib dispo</item>
        <item>Options</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/clock</item>
        <item>@drawable/forum</item>
        <item>@drawable/search</item>
        <item>@drawable/options</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>