<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e8"
    android:orientation="vertical"
    android:padding="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/shape_coins_arrondies" >

        <EditText
            android:id="@+id/rentrer_edittext_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/rentrer_imagebutton_search"
            android:ems="10"
            android:hint="@string/destination" >
        </EditText>

        <ImageButton
            android:id="@+id/rentrer_imagebutton_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@layout/grey_button"
            android:contentDescription="@string/search"
            android:src="@android:drawable/ic_dialog_map" />

        <ProgressBar
            android:id="@+id/rentrer_progressbar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@layout/shape_coins_arrondies" >

        <TextView
            android:id="@+id/textView1"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/title"
            android:text="@string/velotoulouse"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/rentrer_listview_velo"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:layout_below="@+id/textView1" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@layout/shape_coins_arrondies" >

        <TextView
            android:id="@+id/textView2"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/title"
            android:text="@string/busmetro"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/rentrer_listview_busmetro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/textView2" >

        </ListView>
    </RelativeLayout>

</LinearLayout>